maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: not found: value width
 for (i <- index to (width*height) - 1){
                     ^JediEscaper:27: error: not found: value height
 for (i <- index to (width*height) - 1){
                           ^